--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,13 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p class = "about">Hey there!</p>
+        <p>
+            I am Prakruthi, a backend engineer from Bengaluru. I love diving deep into code, solving complex problems,
+            and building efficient systems. /n When I'm not behind a screen, you'll likely find me playing sports or
+            exploring creative outlets. Whether it's on the field or customizing phrases, I'm always looking for ways to
+            bring energy and a personal touch to everything I do. Let's build something great together!
+        </p>
         <img class="portrait" src="/img/me.jpg">
     </div>
 
