Addition of help page content

--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -10,7 +10,18 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>{{content}}</p>
+        <p> Welcome to the Help page!</p>
+
+        <p> To find weather information, simply type the city name into the search bar. You'll
+            get the real-time temperature and a forecast for your selected city. </p>
+
+        <p>Additional details like visibility and humidity are also provided to give you a comprehensive understanding
+            of the weather conditions.
+            All temperature values are shown in degrees Celsius. </p>
+
+        <p>If the app isn't loading, please check your internet connection or try refreshing the page.
+            For location issues, make sure you enter the proper city name, as misspellings or incorrect entries may lead
+            to inaccurate results.</p>
     </div>
 
     {{>footer}}
